<resources>
    <string name="app_name">PersonasMaterial</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_crear">CREAR PERSONAS</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="detalle_personas">DETALLE PERSONAS</string>
    <string name="cedula">Cédula</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensaje_eliminar">¿Está segurp de eliminar esta persona?</string>
    <string name="mensaje_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="mensaje_error_cedula">Digite la cédula</string>
    <string name="mensaje_error_nombre">Digite el nombre</string>
    <string name="mensaje_error_apellido">Ingrese el apellido</string>
    <string name="mensaje_error_foto">Seleccione una foto</string>
    <string name="mensaje_persona_guardada">Persona Guardada Exitosamente!!</string>
    <string name="seleccione_foto">Seleccione la foto de la persona</string>
</resources>